# TimeManager

./: .gitignore  CMakeLists.txt  widget.cpp  widget.h  widget.ui
